--- a/webpack-4-simple/package.json
+++ b/webpack-4-simple/package.json
@@ -8,5 +8,9 @@
   "devDependencies": {
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14"
+  },
+  "scripts": {
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production"
   }
 }
