--- a/webpack-4-simple/package.json
+++ b/webpack-4-simple/package.json
@@ -6,17 +6,21 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "autoprefixer": "^8.3.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.8.3",
+    "postcss-loader": "^2.1.4",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-md5-hash": "^0.0.6"
   },
   "scripts": {
     "dev": "webpack --mode development",
