--- a/webpack-4-simple/package.json
+++ b/webpack-4-simple/package.json
@@ -10,6 +10,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
@@ -20,10 +21,11 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3",
     "webpack-md5-hash": "^0.0.6"
   },
   "scripts": {
-    "dev": "webpack --mode development",
+    "dev": "webpack-dev-server --mode development --host 0.0.0.0 --port 8089",
     "build": "webpack --mode production"
   }
 }
