--- a/webpack-4-simple/package.json
+++ b/webpack-4-simple/package.json
@@ -27,5 +27,8 @@
   "scripts": {
     "dev": "webpack-dev-server --mode development --host 0.0.0.0 --port 8089",
     "build": "webpack --mode production"
+  },
+  "dependencies": {
+    "webpack-merge": "^4.1.2"
   }
 }
