--- a/webpack-4-react/package.json
+++ b/webpack-4-react/package.json
@@ -12,6 +12,7 @@
     "babel-preset-env": "^1.6.1",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
@@ -23,11 +24,12 @@
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3",
     "webpack-md5-hash": "^0.0.6",
-    "eslint": "^4.19.1"
+    "babel-eslint": "^8.2.3"
   },
   "scripts": {
     "dev": "webpack-dev-server --mode development --host 0.0.0.0 --port 8089",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "lint": "eslint src"
   },
   "dependencies": {
     "webpack-merge": "^4.1.2"
