--- a/webpack-4-react/package.json
+++ b/webpack-4-react/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "autoprefixer": "^8.3.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "css-hot-loader": "^1.3.9",
@@ -23,8 +24,7 @@
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3",
-    "webpack-md5-hash": "^0.0.6",
-    "babel-eslint": "^8.2.3"
+    "webpack-md5-hash": "^0.0.6"
   },
   "scripts": {
     "dev": "webpack-dev-server --mode development --host 0.0.0.0 --port 8089",
@@ -32,6 +32,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "eslint-plugin-react": "^7.7.0",
     "webpack-merge": "^4.1.2"
   }
 }
