--- a/webpack-4-react/package.json
+++ b/webpack-4-react/package.json
@@ -11,9 +11,11 @@
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
@@ -29,10 +31,9 @@
   "scripts": {
     "dev": "webpack-dev-server --mode development --host 0.0.0.0 --port 8089",
     "build": "webpack --mode production",
-    "lint": "eslint src"
+    "lint": "eslint src/**"
   },
   "dependencies": {
-    "eslint-plugin-react": "^7.7.0",
     "webpack-merge": "^4.1.2"
   }
 }
