--- a/webpack-4-react/package.json
+++ b/webpack-4-react/package.json
@@ -22,19 +22,21 @@
     "node-sass": "^4.8.3",
     "postcss-loader": "^2.1.4",
     "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3",
     "webpack-md5-hash": "^0.0.6",
-    "webpack-merge": "^4.1.2",
-    "react-dom": "^16.3.2"
+    "webpack-merge": "^4.1.2"
   },
   "scripts": {
     "dev": "webpack-dev-server --mode development --host 0.0.0.0 --port 8089",
     "build": "webpack --mode production",
     "lint": "eslint src/**"
   },
-  "dependencies": {}
+  "dependencies": {
+    "normalize.css": "^8.0.0"
+  }
 }
