--- a/webpack-4-react/package.json
+++ b/webpack-4-react/package.json
@@ -15,8 +15,7 @@
     "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.7.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "eslint-plugin-react": "^7.7.0",    
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.8.3",
@@ -29,14 +28,15 @@
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3",
     "webpack-md5-hash": "^0.0.6",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.2",
+    "normalize.css": "^8.0.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "uglifyjs-webpack-plugin": "^1.2.5"
   },
   "scripts": {
     "dev": "webpack-dev-server --mode development --host 0.0.0.0 --port 8089",
     "build": "webpack --mode production",
     "lint": "eslint src/**"
   },
-  "dependencies": {
-    "normalize.css": "^8.0.0"
-  }
+  "dependencies": {}
 }
