--- a/webpack-4-react/package.json
+++ b/webpack-4-react/package.json
@@ -36,7 +36,8 @@
   "scripts": {
     "dev": "webpack-dev-server --mode development --host 0.0.0.0 --port 8089",
     "build": "webpack --mode production",
-    "lint": "eslint src/**"
+    "lint": "eslint src/**",
+    "stats": "webpack --mode production --json > stats.json"
   },
   "dependencies": {}
 }
