--- a/webpack-4-simple/package.json
+++ b/webpack-4-simple/package.json
@@ -1,34 +1,39 @@
 {
   "name": "webpack-4-simple",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "main": "index.js",
   "author": "v24dc",
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "autoprefixer": "^8.3.0",
-    "babel-core": "^6.26.0",
+    "autoprefixer": "^8.4.1",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.6.1",    
     "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "eslint": "^4.19.1",    
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.8.3",
-    "postcss-loader": "^2.1.4",
+    "node-sass": "^4.9.0",
+    "normalize.css": "^8.0.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "postcss-loader": "^2.1.5",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3",
-    "webpack-md5-hash": "^0.0.6"
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-md5-hash": "^0.0.6",
+    "webpack-merge": "^4.1.2"
   },
   "scripts": {
     "dev": "webpack-dev-server --mode development --host 0.0.0.0 --port 8089",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "lint": "eslint src/**",
+    "stats": "webpack --mode production --json > stats.json"
   },
-  "dependencies": {
-    "webpack-merge": "^4.1.2"
-  }
+  "dependencies": {}
 }
