--- a/webpack-4-ts-react/package.json
+++ b/webpack-4-ts-react/package.json
@@ -15,5 +15,8 @@
     "typescript": "^2.9.2",
     "webpack": "^4.12.2",
     "webpack-cli": "^3.0.8"
+  },
+  "scripts": {
+    "build": "webpack --mode production"
   }
 }
