--- a/webpack-4-ts-react/package.json
+++ b/webpack-4-ts-react/package.json
@@ -14,9 +14,11 @@
     "source-map-loader": "^0.2.3",
     "typescript": "^2.9.2",
     "webpack": "^4.12.2",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   },
   "scripts": {
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --mode development --host 0.0.0.0 --port 8089"
   }
 }
