--- a/webpack-4-ts-react/package.json
+++ b/webpack-4-ts-react/package.json
@@ -8,10 +8,20 @@
   "devDependencies": {
     "@types/react": "^16.4.2",
     "@types/react-dom": "^16.0.6",
+    "autoprefixer": "^8.6.4",
     "awesome-typescript-loader": "^5.2.0",
+    "css-hot-loader": "^1.3.9",
+    "css-loader": "^0.28.11",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.9.0",
+    "normalize.css": "^8.0.0",
+    "postcss-loader": "^2.1.5",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "sass-loader": "^7.0.3",
     "source-map-loader": "^0.2.3",
+    "style-loader": "^0.21.0",
     "typescript": "^2.9.2",
     "webpack": "^4.12.2",
     "webpack-cli": "^3.0.8",
