--- a/webpack-4-ts-react/package.json
+++ b/webpack-4-ts-react/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@types/react": "^16.4.2",
     "@types/react-dom": "^16.0.6",
+    "@types/webpack-env": "^1.13.6",
     "autoprefixer": "^8.6.4",
     "awesome-typescript-loader": "^5.2.0",
     "css-hot-loader": "^1.3.9",
@@ -16,6 +17,7 @@
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "normalize.css": "^8.0.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.3",
     "postcss-loader": "^2.1.5",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -23,12 +25,16 @@
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "typescript": "^2.9.2",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.12.2",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-md5-hash": "^0.0.6",
+    "webpack-merge": "^4.1.3"
   },
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack-dev-server --mode development --host 0.0.0.0 --port 8089"
+    "dev": "webpack-dev-server --mode development --host 0.0.0.0 --port 8089",
+    "stats": "webpack --mode production --json > stats.json"
   }
 }
