--- a/webpack-4-ts-react/tsconfig.json
+++ b/webpack-4-ts-react/tsconfig.json
@@ -5,6 +5,11 @@
     "noImplicitAny": true,
     "module": "commonjs",
     "target": "es5",
+    "lib": [
+      "es5",
+      "es6",
+      "dom"
+    ],
     "jsx": "react"
   },
   "include": [
