--- a/webpack-4-simple/package.json
+++ b/webpack-4-simple/package.json
@@ -6,34 +6,33 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "autoprefixer": "^8.6.4",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.5",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.7.0",
-    "css-hot-loader": "^1.3.9",
-    "css-loader": "^0.28.11",
-    "eslint": "^5.0.1",
+    "autoprefixer": "^9.5.1",
+    "@babel/core": "^7.4.3",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "@babel/preset-env": "^7.4.3",
+    "css-hot-loader": "^1.4.4",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
-    "normalize.css": "^8.0.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.3",
-    "postcss-loader": "^2.1.5",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.12.2",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.11.0",
+    "normalize.css": "^8.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1",
     "webpack-md5-hash": "^0.0.6",
-    "webpack-merge": "^4.1.3"
+    "webpack-merge": "^4.2.1"
   },
   "scripts": {
     "dev": "webpack-dev-server --mode development --host 0.0.0.0 --port 8089",
     "build": "webpack --mode production",
     "lint": "eslint src/**",
     "stats": "webpack --mode production --json > stats.json"
-  },
-  "dependencies": {}
+  }
 }
